[package]
name = "jls"
authors = ["Santiago Alessandri"]
description = "Implementation of the simple JSON Licensing Scheme for issuing and/or verifying licenses"
license = "MIT"
categories = ["authentication", "config", "cryptography"]
keywords = ["licensing"]
homepage = "https://github.com/salessandri/jls"
repository = "https://github.com/salessandri/jls"

version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"

chrono = { version = "^0.4", features = ["serde"] }
uuid = { version = "^1.4", features = ["serde"] }

jose-jwk = "^0.1"
jose-jws = "^0.1"
rsa = { version = "^0.9", features = ["sha2"] }

[dev-dependencies]

lazy_static = "^1.4"